--- a/_config.yml
+++ b/_config.yml
@@ -96,26 +96,12 @@ author:
   avatar: "/assets/images/profile.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio: "Am I **amazing** person?"
   location: "Korea, Republic of"
-  email:
+  linkedin: "young-ha-6a2aa2189"
+  github: "yyyoungha"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:yyyoungha@gmail.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://yyyoungha.github.io"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/yyyoungha"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
 
 # Site Footer
 footer:
